--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
   height: 15%;
   width: 100%;
 }
-#buttons > button {
+#buttons > button, #buttons > a {
   padding: 10px 22px;
   border-radius: 10px;
   border: none;
@@ -129,15 +129,21 @@ body {
   transition: all 0.3s ease;
   cursor: pointer;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
 }
 
-#buttons > button:hover {
+#buttons > button:hover, #buttons > a:hover {
   transform: translateY(-3px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
 }
-#buttons > button > i {
+
+#buttons > button > i, #buttons > a > i {
   font-size: 17px;
 }
+
 #buttons > #b1 {
   margin-left: 20px;
   background-color: #8873ef;
@@ -152,8 +158,9 @@ body {
 #buttons > #b2 {
   margin-left: 20px;
   transition: all 0.3s ease;
+  background-color: #e6e3e3;
+  color: #000;
 }
-
 #buttons > #b2:hover {
   background-color: #f0f0f0;
   transform: translateY(-3px) scale(1.05);
